[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://UI/MenuLayer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Westhorn-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/GhostsOfThePlateauLoop.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="startMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="startMessage" type="TextureRect" parent="startMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.0
margin_top = 100.0
margin_right = 138.0
margin_bottom = 400.0
texture = ExtResource( 1 )

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -144.0
margin_right = 102.0
margin_bottom = -2.0

[node name="Score_label" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_right = 203.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1

[node name="Highscore_Label" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 44.0
margin_right = 203.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Best: 0"
align = 1

[node name="Restart" type="Button" parent="GameOverMenu/VBoxContainer"]
margin_top = 88.0
margin_right = 203.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "Restart"

[node name="Tween" type="Tween" parent="."]

[node name="SpaghettiWestern" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="GameOverMenu/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
